# MATEROV

./: .gitignore
ArduinoCode/mixeretc/: main.cpp  main.h
Duino/Mixer_Code/: Mixer_Code.ino
Duino/arduino_serial_rx/: arduino_serial_rx.ino
Duino/sketch_feb24a/: sketch_feb24a.ino
Duino/sketch_nov18a/: Arduino IDE 2.2.1  Arduino IDE 2.2.1 alias  sketch_nov18a.ino
Float/: float_radio.ino  motorswitcher.ino  surface_radio.ino  transmitter_receiver.ino
Float/LPS35HW_pressure_sensor/: LPS35HW_pressure_sensor.ino
Float/LPS35HW_pressure_sensor/LPS35HW_pressure_sensor/: LPS35HW_pressure_sensor.ino
Float/float_radio/: float_radio.ino
Float/magnets_how_do_they_work/: magnets_how_do_they_work.ino
Float/motor_controller/: motor_controller.ino
Float/motorswitcher/: motorswitcher.ino
Float/surface_radio/: surface_radio.ino
Float/ultrasonic_test/: ultrasonic_test.ino
Matlab and Excel/: MixerCalculations.m  T200 Performance Data & Calculations.xlsx
ROS/: LICENSE  README.md  frames.gv
ROS/src/grizzly_drive/: package.xml
ROS/src/grizzly_drive/launch/: drive.launch
ROS/src/grizzly_duino/: platformio.ini
ROS/src/grizzly_duino/src/: main.cpp
ROS/src/grizzly_gazebo/: package.xml
ROS/src/grizzly_gazebo/config/: control.yaml
ROS/src/grizzly_gazebo/launch/: grizzly_control.launch  grizzly_description.launch  grizzly_gazebo.launch
ROS/src/grizzly_gazebo/rviz/: config.rviz
ROS/src/grizzly_gazebo/urdf/: grizzly.urdf.xacro
ROS/src/grizzly_teleop/: package.xml
ROS/src/grizzly_teleop/launch/: joystick.launch
ROS/src/grizzly_teleop/src/: joy_teleop.py
ROS/src/rov_drive/: package.xml
ROS/src/rov_mcu/: platformio.ini
ROS/src/rov_mcu/src/: main.cpp
ROS/src/rov_teleop/launch/: joystick.launch
ROS/src/rov_visualize/launch/: visualize.launch
ros2/src/ekf/: CMakeLists.txt  package.xml
ros2/src/ekf/src/: ekf.cpp
ros2/src/motor_control/: CMakeLists.txt  package.xml
ros2/src/motor_control/src/: thruster.cpp
ros2/src/rov/: CMakeLists.txt  README.md  package.xml
ros2/src/rov/config/: joystick.yaml
ros2/src/rov/launch/: joystick.launch.py  rov.launch.py
ros2/src/sensors/: CMakeLists.txt  package.xml
ros2/src/sensors/src/: sensors.cpp
ros2/src/serial/: CMakeLists.txt  README.md  package.xml
ros2/src/serial/src/: bidirectional.cpp
rov_mcu/: motor_controls.cpp  platformio.ini  test_bidirectional_serial_comms.ino  test_mixer_serial_comms.ino  test_thruster_serial_comms.ino
rov_mcu/src/: main.cpp
src/grizzly_drive/launch/: usbcam.launch
src/grizzly_gazebo/config/: pid_gains.yaml
src/grizzly_gazebo/urdf/: grizzly.gazebo.xacro
src/rov_drive/launch/: drive.launch
src/rov_drive/src/: drive.py
src/rov_mcu/: platformio.ini
src/rov_mcu/src/: main.cpp  motor_controls.cpp
src/rov_teleop/: package.xml
src/rov_teleop/launch/: joystick.launch
src/rov_teleop/src/: joy_teleop.py
src/rov_visualize/: package.xml
src/rov_visualize/launch/: sensor_data.launch
src/rov_visualize/src/: imu_to_tf.py  sensor.py
src/rov_visualize/urdf/: rov.urdf
