<?xml version="1.0"?>
<package>
  <name>rov_teleop</name>
  <version>1.0.0</version>
  <description>The rov_teleop package</description>
  <license>Apache-2.0</license>
  <maintainer email="liyifei@wustl.edu">Bruce Li</maintainer>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
 
  <run_depend>joy</run_depend>
  <run_depend>rospy</run_depend>
  <export>
    <launch file="launch/joystick.launch"/>
  </export>

</package>