<?xml version="1.0"?>
<package>
  <name>rov_visualize</name>
  <version>1.0.0</version>
  <description>The rov_visualize package</description>
  <maintainer email="liyifei@wustl.edu">Bruce Li</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
 
  <run_depend>joy</run_depend>
  <run_depend>rospy</run_depend>
</package>

 