<?xml version="1.0"?>
<package format="2">
  <name>grizzly_gazebo</name>
  <version>0.0.1</version>
  <description>The grizzly_gazebo package</description>

  <maintainer email="b.j.wei@wustl.edu">Brian Wei</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>diff_drive_controller</depend>

</package>
